www/css/app.css
/* ... */
.ui-state-active,.ui-widget-content .ui-state-active {
    box-shadow: 0px 3px 4px #56132A inset, 0px 2px 3px #fff !important;
    background: #E1014D !important;
}

.ui-slider-handle .ui-state-focus{
  border:0;
}
ul.slider_texto {
  list-style: none;
  font-size: 15px;
}
ul.slider_texto li {
  width: 50%;
  float: left;
  padding-left: 12px;
  text-align: left;  
}
div#slider,div#slider-manicure {
  margin-right: 38px;
  margin-left: 33px;
  margin-top: 45px;
}
ul.slider_texto li.op2 {
   text-align: right;
}
#mapa,#confirmacao-agora{
  overflow: hidden;
}

#map-canvas{
    height: calc(100vh - 146px);
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    transition: 500ms;
}
#map-canvas.full{
  height: calc(100vh - 50px);
}
.controls {
  margin-top: 10px;
  border: 1px solid transparent;
  border-radius: 2px 0 0 2px;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  height: 32px;
  outline: none;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

#pac-input {
  background-color: #fff;
  font-family: Roboto;
  font-size: 15px;
  font-weight: 300;
  padding: 0 11px 0 13px;
  text-overflow: ellipsis;
  margin:10px;
  width: 95vw;    
}

#pac-input:focus {
  border-color: #4d90fe;
}

.pac-container {
  font-family: Roboto;
}

#type-selector {
  color: #fff;
  background-color: #4d90fe;
  padding: 5px 11px 0px 11px;
}

#type-selector label {
  font-family: Roboto;
  font-size: 13px;
  font-weight: 300;
}
.col.last {padding-left: 10px}
.col2{ width: 50% }
.col4{width: 25% }
.col1-4{width: 25% }
.col2-4{width: 50% }
.col3-4{width: 75% }
.col3{width: 33.3% }
.col1-3{width:33.3% }
.col2-3{width:66% }

.confirmacao h1{
  font-size: 15px; 
  padding: 10px 0;
}

.confirmacao h1 i {
  margin-right: 10px;  
}
ul.no-chevron li >a:after{
  content:none;
}
#map-canvas2{
  height:160px;
  -webkit-user-select: none;
}
.vcenter-historico{
  margin-top: 50vh !important;
  text-align: center;
}
.list li:active {
    background: #E1014D;
    color:white;
}
label.error{
    width: 100%;
    font-size: 11px;
    text-align: left;
    color: red;
    padding: 5px 0px;
}

#countdown canvas{
  margin-left: auto;
  margin-right: auto;
  display: block;
}
#btn_digitalizar{
  margin: 0px 0px 11px;
  padding: 10px;
  width: 100%;
}
#btn_digitalizar .icon:before{
  top:0px;
}

.cartao-credito {
  padding: 10px 0px;
  margin-bottom: 10px;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid #ccc;

}

.cartao-credito img{
  float: left;
}

.cartao-credito p{
  padding-top: 1px;
  padding-left: 42px;
}
.cartao-credito p.visa{
  background: url('../images/visa.png')no-repeat;
}

.cartao-credito p.mastercard{
  background: url('../images/mastercard.png')no-repeat;
}

.cartao-credito p.diners_clube{
  background: url('../images/diners_clube.png')no-repeat;
}

.cartao-credito p.elo{
  background: url('../images/elo.png')no-repeat;
}

#lista-servicos{
  margin-bottom: 60px;
}

.list-item{
  border-bottom: 1px solid #ccc;
}

#lista-servicos .list-item input[type="checkbox"] + label{
  float: left;
  margin-left: 20px;
}

#lista-servicos .list-item input[type="number"]{
  text-align: center;
}
#appversion{
  font-size: 12px;
  text-align: center;
}
select,
textarea,
input[type="text"],
input[type=search],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="tel"],
input[type="color"],
.input-group  {
  background: inherit;
  color: inherit;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid #ccc;
}
.star-ratings-sprite {
  background: url("../images/star-rating-sprite.png") repeat-x;
  font-size: 0;
  height: 21px;
  line-height: 0;
  overflow: hidden;
  text-indent: -999em;
  width: 110px;
  margin: 0 auto;
}
.star-ratings-sprite-rating {
  background: url("../images/star-rating-sprite.png") repeat-x;
  background-position: 0 100%;
  float: left;
  height: 21px;
  display:block;
}
#lista-manicures li a{
  overflow: hidden;
}
#lista-manicures li img{
  float: left;
  width: auto;
  height: 44px;
}
#lista-manicures li .nome{
  float: left;
  margin-left: 10px;
  margin-top: 12px;
}
#lista-manicures li .star-ratings{
  float: right; 
  margin-top: 9px;
}
#lista-manicures li .star-ratings p{
  margin: 0px 5px;
  font-size: 11px;
}
#confirmacao-resumo li.total{
  background-color: #f3f3f3;
  margin-left: 0px;
  padding-left: 20px;
  margin-bottom: 0px;
  font-weight: bold;
  padding-bottom: 30px;
}
#confirmacao-resumo h1 {
    font-size: 15px;
    text-align: center;
    padding: 10px 10px;
    background: #f3f3f3;
}
@media all and (max-width: 320px) {
   .ios7 ul.list {
      font-size:11px;
    }
}

#historico ul img{
  width: 100%;
}

#historico .col p {
  font-size: 12px;
  line-height: 11px;
}
#historico .col p span{
  color: #ce0b0b;
  font-weight: bold;
}

